fix: remove draggable from images and adjust image text color for better readability

--- a/src/index.css
+++ b/src/index.css
@@ -143,3 +143,8 @@ li:hover .squizingLetter {
 .hitUs{
   background-color: #eae7d4;
 }
+
+
+.imagesContainer{
+  color: #eae7d4;
+}
